test/errors/invalid_member_access.correct
error: invalid_member_access.li:6:11: number has no member 'foo'
│ println(n.foo);  # Error: 'number' has no member 'foo'
│         ~~~~~
│           ^
